# Edge-Computing-Low-Light-Satellite-Image-Enhancement

./: README.md
Inference/: CMakeLists.txt  ll_enhancement_algorithm.cpp  ll_enhancement_algorithm.h  main.cpp  memAlloc.h  q_Train_Model_Weight.h  test_1.cpp  test_1.h
Low-Light-Satellite-Image-Enhancement-Lightweight-Training-Model/: Myloss.py  compress_trained_weights.py  dataloader.py  lowlight_train.py  model.py  qZeroDCE_Weight.h
Low-Light-Satellite-Image-Enhancement-Lightweight-Training-Model/snapshots_weight_trongan93/: R6Epoch1.pth
